--- a/style.css
+++ b/style.css
@@ -20,7 +20,14 @@ body {
 	height: 400px;
 	background-color: #FFEFD5;
 	border: 1px solid black;
+	overflow: hidden;
+}
+
+.chat-list {
 	overflow: scroll;
+	width: 100%;
+	height: 100%;
+	padding-right: 17px;
 }
 
 .chat-form {
@@ -39,16 +46,33 @@ li {
 li.chat-msg {
 	font-size: 1.2em;
 	width: 75%;
+	border: 1px solid black;
+	border-radius: 3px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.chat-msg.own-msg,
+.chat-msg.own-msg .msg-text {
+	float: right;
+	background-color: green;
+	margin-right: 8%;
+}
+
+.chat-msg.others-msg,
+.chat-msg.others-msg .msg-text {
+	background-color: blue;
 }
 
 textarea.msg-text {
-	width: 100%;
-	color: #708090;
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: 2%;
 }
 
 .msg-text {
 	border: none;
-	background-color: #FFEFD5;
 }
 
 textarea {
