--- a/testing/reports/CHROME_57.0.2987.98_Windows NT_chat-page.xml
+++ b/testing/reports/CHROME_57.0.2987.98_Windows NT_chat-page.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <testsuites errors="0"
-            failures="0"
+            failures="1"
             tests="1">
 
   <testsuite name="chat-page"
-    errors="0" failures="0" hostname="" id="" package="chat-page" skipped="0"
-    tests="1" time="3.563" timestamp="Sun, 12 Mar 2017 16:34:58 GMT">
+    errors="0" failures="1" hostname="" id="" package="chat-page" skipped="0"
+    tests="1" time="14.86" timestamp="Sun, 12 Mar 2017 17:04:26 GMT">
   
-    <testcase name="Chat main page testing" classname="chat-page" time="3.563" assertions="1">
+    <testcase name="Chat main page testing" classname="chat-page" time="14.86" assertions="9">
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+
+      <failure message="Testing if element &lt;.chat-list:nth-child(2)&gt; is present.">    at Object.Chat main page testing (C:\Users\Jonathon\desktop\chat-prog\testing\tests\chat-page.js:27:17)
+    at Module.call (C:\users\Jonathon\Desktop\nw-test\nightwatch\lib\runner\module.js:62:34)
+    at C:\users\Jonathon\Desktop\nw-test\nightwatch\lib\runner\testcase.js:70:29
+    at _combinedTickCallback (internal/process/next_tick.js:67:7)</failure>
 
     
     </testcase>
