--- a/style.css
+++ b/style.css
@@ -18,9 +18,13 @@ h1 {
 	margin-right: auto;
 }
 
-.chat-area {
+.chat-container {
 	width: 500px;
 	float: left;
+}
+
+.chat-area {
+	width: 500px;
 	height: 400px;
 	background-color: #FFEFD5;
 	border: 1px solid black;
@@ -34,13 +38,6 @@ h1 {
 	padding-right: 17px;
 }
 
-.chat-form {
-	clear: both;
-	margin-top: 25px;
-	width: 60%;
-	margin-left: auto;
-	margin-right: auto;
-}
 
 li {
 	list-style: none;
@@ -64,7 +61,7 @@ li {
 	margin-left: 10px;	
 }
 
-.user-name {
+.chat-area .user-name {
 	font-size: 24px;
 	margin-left: 10px;	
 }
@@ -91,12 +88,12 @@ textarea.msg-text {
 	border: none;
 }
 
-textarea {
+.chat-area textarea {
     resize: none;
 }
 
 .online-users {
-	width: 25%;
+	/*width: 25%;*/
 	float: right;
 }
 
@@ -107,3 +104,49 @@ textarea {
 	padding-top: 5px;
 }
 
+.chat-form {
+	clear: both;
+	padding-top: 25px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.chat-input {
+}
+
+.chat-text {
+	display: block;
+	width: 70%;
+	margin-left: 10%;
+	margin-right: 20%;
+	margin-bottom: 15px;
+	border-radius: 7px;
+}
+
+.chat-submit {
+	background: #3498db;
+	background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+	background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+	background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+	background-image: -o-linear-gradient(top, #3498db, #2980b9);
+	background-image: linear-gradient(to bottom, #3498db, #2980b9);
+	-webkit-border-radius: 28;
+	-moz-border-radius: 28;
+	border-radius: 28px;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	text-decoration: none;
+	margin-left: 10%;
+}
+
+.chat-submit:hover {
+	background: #3cb0fd;
+	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+	text-decoration: none;
+}
