--- a/style.css
+++ b/style.css
@@ -50,11 +50,10 @@ li {
 	clear: right;
 	font-size: 20px;
 	width: 75%;
-	border: 1px solid black;
 	border-radius: 7px;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	background-color: #0066ff;
+	background-color: #99ddff;
 }
 
 .chat-meta {
@@ -76,7 +75,7 @@ li {
 	margin-right: 58px;
 	float: right;
 	clear: left;
-	background-color: #00ff33;
+	background-color: #bfd9cc;
 }
 
 textarea.msg-text {
@@ -126,7 +125,7 @@ textarea.msg-text {
 	background-image: linear-gradient(to bottom, #3498db, #2980b9);
 	-webkit-border-radius: 28;
 	-moz-border-radius: 28;
-	border-radius: 28px;
+	border-radius: 6px;
 	color: #ffffff;
 	font-size: 20px;
 	padding: 10px 20px 10px 20px;
@@ -145,22 +144,30 @@ textarea.msg-text {
 }
 
 .online-users {
-	background-color: #000000;
+	background-color: #FFEFD5;
 	float: right;
 	width: 250px;
-	border-radius: 3px;
+	border-radius: 0 6px 6px 0;
 }
 
 .users-list {
 	padding-left: 0;
 }
 .users-list li input {
-	background-color: #808080;
-	color: #FFFFFF;
+	background-color: #99ddff;
+	color: #000000;
 	font-size: 20px;
 	width: 235px;
 	margin: 5px 5px 5px 5px;
 	border-radius: 3px;
+}
+
+.users-list li.user-self input {
+	background-color: #bfd9cc;
+}
+
+.user-name {
+	background-color: #FFEFD5;
 }
 
 @media (max-width: 760px) {
