Add mic button to page

--- a/style.css
+++ b/style.css
@@ -115,9 +115,10 @@ textarea.msg-text {
 	margin-right: 20%;
 	margin-bottom: 15px;
 	border-radius: 7px;
+	resize: none;
 }
 
-.chat-submit {
+.chat-button {
 	background: #3498db;
 	background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
 	background-image: -moz-linear-gradient(top, #3498db, #2980b9);
@@ -131,10 +132,10 @@ textarea.msg-text {
 	font-size: 20px;
 	padding: 10px 20px 10px 20px;
 	text-decoration: none;
-	margin-left: 10%;
+	margin-left: 5px;
 }
 
-.chat-submit:hover {
+.chat-button:hover {
 	background: #3cb0fd;
 	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
 	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
@@ -142,6 +143,10 @@ textarea.msg-text {
 	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
 	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
 	text-decoration: none;
+}
+
+.chat-submit {
+	margin-left: 10%;
 }
 
 .online-users {
